plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
}
build
bootJar {
    archiveFileName = "app.jar"
}

group = 'com.weedrice'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// Querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// SpringDoc OpenAPI (Swagger)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	
	// Bucket4j for Rate Limiting
	implementation 'com.bucket4j:bucket4j-core:8.10.1'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-autoconfigure' // Add this line

	// Spring Mail (Google SMTP)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// AWS SDK v2 (S3 only)
	implementation platform('software.amazon.awssdk:bom:2.21.1')
	implementation 'software.amazon.awssdk:s3'
}

tasks.named('test') {
	useJUnitPlatform()
	ignoreFailures = true  // 테스트 실패해도 빌드 계속 진행
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true  // CI/CD에서 사용 가능하도록 XML 리포트 활성화
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
	}
	// 커버리지 검증은 별도로 실행 (실패해도 리포트는 생성)
}

// QueryDSL 생성 Q* 클래스를 JaCoCo 리포트에서 제외 (entity 패키지 등 커버리지에 반영 안 함)
afterEvaluate {
	tasks.named('jacocoTestReport').configure {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it).exclude('**/Q*.class', '**/Q*$*.class')
		}))
	}
}

// 테스트 커버리지 검증 작업
tasks.named('jacocoTestCoverageVerification') {
	dependsOn tasks.named('jacocoTestReport')
	violationRules {
		rule {
			limit {
				minimum = 0.50  // 목표 50% 커버리지
			}
		}
	}
}

// Querydsl
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
	options.encoding = 'UTF-8'  // Java 소스 파일 인코딩
}

clean.doLast {
	file(querydslDir).deleteDir()
}
